--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,21 @@ allprojects {
         mavenCentral()
     }
 
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier = 'javadoc'
+        from javadoc.destinationDir
+    }
+
+    artifacts {
+        archives sourcesJar
+        archives javadocJar
+    }
+
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.11'
         testCompile "org.mockito:mockito-core:2.+"
