--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ allprojects {
         from javadoc.destinationDir
     }
 
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" <<  "-Werror"
+    }
+
     artifacts {
         archives sourcesJar
         archives javadocJar
